welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: type mismatch;
 found   : String("0")
 required: Int
		return "0"
                       ^